Replace reference to sun.misc.BASE64Encoder with org.apache.commons.code.binary.Base64 (#91)